<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/share_txt_reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/share_award_rule"
            android:textColor="@color/c_3a3a3a"
            android:textSize="@dimen/sp13" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:drawablePadding="@dimen/dp8"
        android:drawableTop="@drawable/preferential"
        android:gravity="center"
        android:text="@string/share_get_donwload"
        android:textColor="@color/c_2c241f"
        android:textSize="@dimen/sp20"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1.5" />

        <TextView
            android:id="@+id/share_txt_share_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="7"
            android:background="@drawable/bc_share_solid_circle"
            android:gravity="center"
            android:paddingBottom="@dimen/dp8"
            android:paddingTop="@dimen/dp8"
            android:text="@string/share_app"
            android:textColor="@color/white"
            android:textSize="@dimen/sp18" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1.5" />
    </LinearLayout>

    <TextView
        android:id="@+id/share_txt_share_qr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center"
        android:padding="@dimen/dp8"
        android:text="@string/share_my_qr"
        android:textColor="@color/c_ff541f" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/share_accumulative"
            android:textSize="@dimen/sp13" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/sha_line_imaginary"
            android:layerType="software" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/share_get_free"
                android:textColor="@color/c_3a3a3a"
                android:textSize="@dimen/sp13" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/sha_red_circle"
                android:padding="5dp"
                android:text="@string/share_click_look"
                android:textColor="@color/c_ff541f"
                android:textSize="@dimen/sp13" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp10"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/share_share_other_person"
                android:textColor="@color/c_3a3a3a"
                android:textSize="@dimen/sp13" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/share_share_time"
                android:textColor="@color/c_3a3a3a"
                android:textSize="@dimen/sp13" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/sha_line_imaginary"
            android:layerType="software" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp9"
            android:text="@string/share_nothing_record"
            android:textSize="@dimen/sp12" />

    </LinearLayout>
</LinearLayout>
